[package]
name = "ghost"
version = "0.1.1"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Define your own PhantomData"
repository = "https://github.com/dtolnay/ghost"
documentation = "https://docs.rs/ghost"
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[badges]
travis-ci = { repository = "dtolnay/ghost" }

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
