[package]
name = "ghost"
version = "0.1.10"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns", "no-std"]
description = "Define your own PhantomData"
documentation = "https://docs.rs/ghost"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/ghost"
rust-version = "1.56"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[dev-dependencies]
rustversion = "1.0"
trybuild = { version = "1.0", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
