[package]
name = "ghost"
version = "0.1.17"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]
description = "Define your own PhantomData"
documentation = "https://docs.rs/ghost"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/ghost"
rust-version = "1.56"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.74"
quote = "1.0.35"
syn = "2.0.46"

[dev-dependencies]
rustversion = "1.0.13"
trybuild = { version = "1.0.81", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[workspace]
members = ["tests/doc"]
